web-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: default
spec:
  replicas: 3  # Number of replicas
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: apache
        image: httpd:2.4
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-content
          mountPath: /usr/local/apache2/htdocs/
      volumes:
      - name: web-content
        emptyDir: {}
      - name: web-server-config
        configMap:
          name: web-server-config
