web-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web-server
